Increasing permgen and adding a temporary helper to try to debug the failing CI tests.